--- a/verilog2.html
+++ b/verilog2.html
@@ -12,7 +12,7 @@
         
         <div id="container--main">
 
-            <a href="verilog.html">&#x2190; Go Back</a>
+            <a href="index.html">&#x2190; Go Back</a>
             <h1>VERILOG (Operators)</h1>
             
             <section id="work-history-wrapper" class="section--page">
@@ -110,7 +110,7 @@
                 </div>
             </section>
 
-            <a href="verilog.html">&#x2190; Home </a>
+            <a href="index.html">&#x2190; Home </a>
             <a href="verilog3.html"> Next page&#x2192;</a>
     </body>
 </html>
