--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="container--main">
             <a href="index.html">&#x2190; Go Back</a>
-            <h1> VERILOG:</h1>
+            <h1> VERILOG </h1>
             <p>Verilog, standardized as IEEE 1364, is a hardware description language (HDL) used to model electronic systems. It is most commonly used in the design and verification of digital circuits at the register-transfer level of abstraction.</p>
             <section id="wrapper--hero" class="section--page">
 
@@ -73,6 +73,7 @@
                         <li><strong>x</strong>: unknown.</li>
                         <li><strong>z</strong>: high impedance.</li>
                     </ul>
+        <section>
         <h2>Number representation in Verilog:</h2>
                 <strong>Declaration: </br>&lt;size&gt; &lt;radix&gt; &lt;value&gt = </strong>
                     <p><strong>&lt;size&gt;</strong> = No.of Bits </p>
@@ -87,8 +88,11 @@
                     <p>Ex1: 4'b 0101</p>
                     <p>Ex2: 8'h 0101xxxx</p>
                     <p>Ex3: 12'o 3zx7 = 011 zzz xxx 111</p>
+        </section>
             <a href="index.html">&#x2190; Home </a>
             <a href="verilog2.html"> Next page&#x2192;</a>
+
+            <p><strong>NOTE: This web page is designed to provide way to learn complete Verilog System Design, in case of any error in data kindly contact through mail:   Srivarunreddyv@gmail.com</strong></p>
             
 
         </div>
