--- a/verilog2.html
+++ b/verilog2.html
@@ -103,14 +103,15 @@
                         <li><strong>>></strong> &#x2192; Shift Right.</li>
                         <li><strong>&lt;&lt;</strong> &#x2192; Shift Left.</li>
                         <p>a = 4,b1010; d = a>>2; // d = 0010 = a&lt;&lt;1 // c = 0100</p>
-                        <li><strong>-</strong> = Subtract.</li>
-                        <li><strong>%</strong> = Modulus.</li>
+                        <li><strong>condition ? true_expr : false_expr</strong></li>
+                        <p><strong>Ex:</strong>Y=(sel)?A:B;</p>
                     </ul>
-                    <P><strong>Ex1:</strong> (5+10 = 15), (10%3 = 1),(5-10 = -5), (10/(-5) = -2)</P>
                 </div>
             </section>
 
             <a href="index.html">&#x2190; Home </a>
             <a href="verilog3.html"> Next page&#x2192;</a>
+
+            <p><strong>NOTE: This web page is designed to provide way to learn complete Verilog System Design, in case of any error in data kindly contact through mail:   Srivarunreddyv@gmail.com</strong></p>
     </body>
 </html>
