--- a/verilog2.html
+++ b/verilog2.html
@@ -13,7 +13,7 @@
         <div id="container--main">
 
             <a href="index.html">&#x2190; Go Back</a>
-            <h1>VERILOG (Operators)</h1>
+            <h1>VERILOG (Operators):<div class="line-start"></div></h1>
             
             <section id="work-history-wrapper" class="section--page">
                 <h2>Arthimetic Operators &lt;/&gt;:</h2>
