--- a/verilog3.html
+++ b/verilog3.html
@@ -51,7 +51,31 @@
                 </ul>
                 </section>
             </div>
-            
+            <h2>Key words</h2>
+
+            <ul>
+                <li><strong>Note: All Keyword will be in lowercase.</strong></li>
+                <li><strong>Ex:</strong></li>
+                <ul id="qualifications--list">
+                    <li>✔️ module, endmodule</li>
+                    <li>✔️ input, output, inout</li>
+                    <li>✔️ reg</li>
+                    <li>✔️ parameter</li>
+                    <li>✔️ begin, end</li>
+                </ul>
+                <li><strong>Ex:</strong></li>
+                <ul id="qualifications--list">
+                    <li>🔹 input clk;</li>
+                    <li>🔹 input addresses</li>
+                    <li>🔹 output reg read_enable;</li>
+                    <li>🔹 inout data;</li>
+                    <li>🔹 parameter DATA_WIDTH = 8;</li>
+                    <li>🔹 parameter ADDR_WIDTH = 8;</li>
+                    <li>🔹 parameter RAM_DEPTH = 1 &lt;&lt; ADDR_WIDTH;</li>
+                </ul>
+            </ul>
+            <a href="verilog3.html">&#x2190; Home </a>
+            <a href="verilog4.html"> Next page&#x2192;</a>
         </div>
     </body>
 </html>
