--- a/verilog3.html
+++ b/verilog3.html
@@ -76,6 +76,7 @@
             </ul>
             <a href="verilog3.html">&#x2190; Home </a>
             <a href="verilog4.html"> Next page&#x2192;</a>
+            <p><strong>NOTE: This web page is designed to provide way to learn complete Verilog System Design, in case of any error in data kindly contact through mail:   Srivarunreddyv@gmail.com</strong></p>
         </div>
     </body>
 </html>
