--- a/index.html
+++ b/index.html
@@ -49,6 +49,29 @@
                         </ul>
                 </div>  
             </section>
+            <section class="section--page">
+                <h2>Basic VLSI Design Flow🔃</h2>
+                <div id="wrapper--techstack__items">
+                    <div class="card--tehstack"><span>
+                        <ul id="qualifications--list">
+                            <div class="line-break"></div>
+                            <li><strong>Behavioural</strong> (Simulate & Verify) &#x2192; Architectural feature</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li><strong>Register Transfer Logic</strong> (Simulate & Verify) &#x2192; State machine and Sequential circuit</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li><strong>Synthesis</strong>(Simulate & Verify) &#x2192; Netlist of hardware component</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li><strong>Logic Design</strong>(Simulate & Verify) &#x2192; Gate level</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li><strong>Circuit Deisgn </strong>(Simulate & Verify) &#x2192; Transistor level</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li><strong>Physical Deisgn</strong> (Final Check)</li>
+                            <li><span style='font-size:30px;'>&#8595;</span></li>
+                            <li>Tape Out</li>
+                            <li><div class="line-break"></div></li>
+                        </ul></span></div>
+                </div>  
+            </section>
 
             <section class="section--page">
                 <div id="wrapper--techstack__items">
