--- a/verilog4.html
+++ b/verilog4.html
@@ -12,7 +12,7 @@
         
         <div id="container--main">
 
-            <a href="index.html">&#x2190; Go Back</a>
+            <a href="index.html">&#x2190; Home</a>
             <h1>VERILOG <div class="line-start"></div></h1>
             <h2>Data types</h2>
                 <h2><strong>Net types</strong></h2>
@@ -86,7 +86,7 @@
                         </ul>
                     </ul>
                 </div>
-                <a href="verilog3.html">&#x2190; Home </a>
+                <a href="verilog3.html">&#x2190; Goback </a>
                 <a href="verilog5.html"> Next page&#x2192;</a>
                 <p><strong>NOTE: This web page is designed to provide way to learn complete Verilog System Design, in case of any error in data kindly contact through mail:   Srivarunreddyv@gmail.com</strong></p>
                 </div>
