--- a/verilog3.html
+++ b/verilog3.html
@@ -12,7 +12,7 @@
         
         <div id="container--main">
 
-            <a href="index.html">&#x2190; Go Back</a>
+            <a href="index.html">&#x2190; Home</a>
             <h1>VERILOG<div class="line-start"></div></h1>
             <h2>Module</h2>
             <div>
@@ -74,7 +74,7 @@
                     <li>🔹 parameter RAM_DEPTH = 1 &lt;&lt; ADDR_WIDTH;</li>
                 </ul>
             </ul>
-            <a href="verilog3.html">&#x2190; Home </a>
+            <a href="verilog2.html">&#x2190; Goback </a>
             <a href="verilog4.html"> Next page&#x2192;</a>
             <p><strong>NOTE: This web page is designed to provide way to learn complete Verilog System Design, in case of any error in data kindly contact through mail:   Srivarunreddyv@gmail.com</strong></p>
         </div>
